Revert "create mixin.sass and fix header on mobile"
This reverts commit 94cf57e05e82639f3b81b5a301ee01efc3c2f97f.

--- a/app/components/app-header/app-header.sass
+++ b/app/components/app-header/app-header.sass
@@ -1,5 +1,3 @@
-@import "../../mixins.sass"
-
 .header
   padding: 30px
   display: flex
@@ -27,19 +25,3 @@
       a
         text-decoration: none
         color: #080808
-
-.header
-  +screen(mobile)
-    display: block
-    text-align: center
-    margin: 10px
-    padding: 10px
-    .logo
-      display: block
-      width: 100%
-    .nav
-      padding-left: 0
-      display: block
-      width: 100%
-      li
-        display: inline-block
